# course_2dgame_engine_sdl

./: .gitignore  CMakeLists.txt  README.md
assets/scripts/: Level1.lua
src/: Animation.cpp  Animation.h  AssetManager.cpp  AssetManager.h  Collision.cpp  Collision.h  Component.cpp  Component.h  Constants.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  FontManager.cpp  FontManager.h  Game.cpp  Game.h  Main.cpp  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h
src/Components/: ColliderComponent.h  KeyboardControlComponent.h  SpriteComponent.h  TextLabelComponent.h  TileComponent.h  TransformComponent.h
src/Transforms/: TransformComponent.h
